--- a/styles.css
+++ b/styles.css
@@ -229,33 +229,56 @@ section .botao{
     background-size: cover;
 }
 
-#secao-planos{
+#secao-orcamento{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(https://cdn.dribbble.com/users/17243/screenshots/14808102/media/487868391258e3dc361bb84f41cf89b6.png?compress=1&resize=400x300&vertical=top);
+    background-image: url('https://images.unsplash.com/photo-1582751836565-74f64cc184cb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
     background-size: cover;
 }
-#secao-planos form{
+
+#secao-orcamento form{
     display: grid;
+    row-gap: 1.5rem;
+    font-size: 2.5rem;
+    justify-items: start;
     grid-template-columns: 1fr auto;
-    background-color: #fff9;
+    background-color: #FFF9; 
     backdrop-filter: blur(2px);
-    border: 10px;
-    padding: 3rem;
+    border-radius: 10px;
+    padding: 4rem;
+}
+
+#secao-orcamento form h3{
+    background-color: #c26666;
+    font-family:'Times New Roman', Times, serif;
+    color: var(--text-primary);
+    position: absolute;
+    top: -10%;
+    left: 5%;
+    padding: 1rem 3rem;
     border-radius: 10px;
 }
 
-#secao-planos form h3{
-    background-color: #c26666;
-    color: var();
-    position: absolute;
-    top: -40% ;
-    padding: 1rem 3rem;
-    border-radius: 10px;
-    font-size: xx-large;
+.input-group {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    column-gap: 1rem;
+    padding: 0 1rem;
+    align-items: center;
 }
-#secao-planos form output{
+
+input[type=text],
+input[type=number]
+{
+    font-size: 2rem;
+    outline: none;
+    padding: 1rem;
+    border-radius: 7px;
+    border: 0;
+}
+
+#secao-orcamento form output{
     grid-column: 2;
 }
