--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,35 @@ body{
     font-family: var(--fontposdefault);
 }
 
+.loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+}
+
+.spin{
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    border: 10px solid chocolate;
+    border-top: 10px solid rgb(228, 15, 86);
+    animation: spin 2s linear infinite;
+}
+.hiden{
+    display: none;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 #hamburguer{
     position: fixed;
     right: 2rem;
@@ -84,6 +113,10 @@ header{
     color: var(--text-primary);
     position: relative;
     overflow: hidden;
+}
+
+header span, h1 {
+    font-size: clamp(3rem, 5vw, 5rem) ;
 }
 .musica{
     height: 100px;
@@ -336,4 +369,20 @@ input[type=number]
 
 #secao-orcamento form output{
     grid-column: 2;
+}
+
+@media (max-width: 890px){
+    #secao-projetos ul{
+        grid-template-columns: 1fr;
+        
+    }
+    #secao-orcamento form{
+        display: flex;
+        flex-direction: column;
+    }
+}
+@media (max-width: 768px){
+    .only-large{
+        display: none;
+    }
 }
